--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
   <div class="sidebar-item">
     <p align="center">
       <a href='{{ site.baseurl }}/'>
-        <img alt="artoo" width="120" height="120" src="{{ site.baseurl }}/public/img/sandcrawler-icon.svg" />
+        <img alt="sandcrawler" width="120" height="120" src="{{ site.baseurl }}/public/img/sandcrawler-icon.svg" />
       </a>
     </p>
   </div>
